Update to the latest SpringAI Lib version